code/force-app/main/default/objects/FinServ__Education__c/fields/FinServ__EducationLevel__c.field-meta.xml
<CustomField>
    <fullName>FinServ__EducationLevel__c</fullName>
    <label>Education Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Post Graduate</fullName>
            </value>
            <value>
                <fullName>Decline to Comment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>