code/force-app/main/default/objects/FinServ__Education__c/fields/FinServ__Institution__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Institution__c</fullName>
    <label>Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>